--- a/.github/workflows/AActions_run_openwrt.yml
+++ b/.github/workflows/AActions_run_openwrt.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Download OpenWrt Images
         run: |
-          curl -o openwrt-armvirt-64-generic-ext4-rootfs.img.gz http://207.246.108.113/openwrt-armvirt-64-generic-ext4-rootfs.img.gz
-          curl -o openwrt-armvirt-64-generic-kernel.bin http://207.246.108.113/openwrt-armvirt-64-generic-kernel.bin
+          curl -o openwrt-armvirt-64-generic-ext4-rootfs.img.gz http://linzifu.xyz:8081/openwrt-armvirt-64-generic-ext4-rootfs.img.gz
+          curl -o openwrt-armvirt-64-generic-kernel.bin http://linzifu.xyz:8081/openwrt-armvirt-64-generic-kernel.bin
 
       - name: Decompress OpenWrt RootFS
         run: gzip -d openwrt-armvirt-64-generic-ext4-rootfs.img.gz
