--- a/.github/workflows/Actions_run_openwrt.yml
+++ b/.github/workflows/Actions_run_openwrt.yml
@@ -15,8 +15,12 @@ jobs:
 
       - name: Download OpenWrt Images
         run: |
-          curl -o openwrt-armvirt-64-generic-ext4-rootfs.img.gz http://linzifu.xyz:8081/openwrt-armvirt-64-generic-ext4-rootfs.img
+          curl -o openwrt-armvirt-64-generic-ext4-rootfs.img.gz http://linzifu.xyz:8081/openwrt-armvirt-64-generic-ext4-rootfs.img.gz
           curl -o openwrt-armvirt-64-generic-kernel.bin http://linzifu.xyz:8081/openwrt-armvirt-64-generic-kernel.bin
+
+      - name: Gzip -d OpenWrt Images
+        run: |
+          gzip -d openwrt-armvirt-64-generic-ext4-rootfs.img.gz
 
       - name: Run OpenWrt in QEMU
         run: |
