--- a/.github/workflows/Actions_run_openwrt.yml
+++ b/.github/workflows/Actions_run_openwrt.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Download OpenWrt Images
         run: |
           curl -o openwrt-armvirt-64-generic-ext4-rootfs.img.gz http://linzifu.xyz:8081/openwrt-armvirt-64-generic-ext4-rootfs.img.gz
-          curl -o openwrt-armvirt-64-generic-kernel.bin http://linzifu.xyz:8081/openwrt-armvirt-64-generic-kernel.bin.gz
+          curl -o openwrt-armvirt-64-generic-kernel.bin.gz http://linzifu.xyz:8081/openwrt-armvirt-64-generic-kernel.bin.gz
 
       - name: Gzip -d OpenWrt Images
         run: |
