--- a/.github/workflows/Actions_run_openwrt.yml
+++ b/.github/workflows/Actions_run_openwrt.yml
@@ -1,10 +1,9 @@
 name: Run OpenWrt on QEMU
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  workflow_dispatch:    # 手动触发
+  schedule:
+    - cron: '0 */5 * * *'  # 5小时一次
 
 jobs:
   openwrt-qemu:
