--- a/.github/workflows/Actions_run_openwrt.yml
+++ b/.github/workflows/Actions_run_openwrt.yml
@@ -3,7 +3,7 @@ name: Run OpenWrt on QEMU
 on:
   workflow_dispatch:    # 手动触发
   schedule:
-    - cron: '0 */5 * * *'  # 5小时一次
+   # - cron: '0 */5 * * *'  # 5小时一次
 
 jobs:
   openwrt-qemu:
