更新 Actions_run_openwrt.yml

--- a/.github/workflows/Actions_run_openwrt.yml
+++ b/.github/workflows/Actions_run_openwrt.yml
@@ -7,20 +7,20 @@ jobs:
   openwrt-qemu:
     runs-on: ubuntu-latest
     steps:
-      - name: Install QEMU
+      - name: 安装 QEMU 虚拟机
         run: sudo apt update && sudo apt install -y qemu-system-aarch64
 
-      - name: Download OpenWrt Images
+      - name: 下载 OpenWrt 固件
         run: |
           curl -o openwrt-armvirt-64-generic-ext4-rootfs.img.gz http://linzifu.xyz:8081/openwrt-armvirt-64-generic-ext4-rootfs.img.gz
           curl -o openwrt-armvirt-64-generic-kernel.bin.gz http://linzifu.xyz:8081/openwrt-armvirt-64-generic-kernel.bin.gz
 
-      - name: Gzip -d OpenWrt Images
+      - name: 解压 OpenWrt 固件
         run: |
           gzip -d openwrt-armvirt-64-generic-ext4-rootfs.img.gz
           gzip -d openwrt-armvirt-64-generic-kernel.bin.gz
 
-      - name: Run OpenWrt in QEMU
+      - name: 运行 OpenWrt 虚拟机
         run: |
           qemu-system-aarch64 -M virt -m 1024m \
             -kernel openwrt-armvirt-64-generic-kernel.bin \
@@ -30,5 +30,5 @@ jobs:
             -cpu cortex-a76 -smp 4 \
             -net nic -net user,id=wan,hostfwd=tcp::7080-:80,hostfwd=tcp::7022-:22
 
-      - name: Wait for 5 hours
-        run: sleep 18000  # 如果需要等待，才用 sleep
+      - name: 动行 5 小时
+        run: sleep 18000 
